--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
                 <p>En plein centre ville ou en pleine nature</p>
                 <div id="search-bar">
                     <!-- Barre de recherche -->
+                    <i class="fa-solid fa-location-dot"></i>
                     <form>
-                        <i class="fa-solid fa-location-dot"></i>
                         <input type="text" id="search" name="search">
-                        <input type="submit" value="Rechercher">
                     </form>
+                    <!--<input type="submit" value="Rechercher">-->
+                    <button id="search-button" type="button"></button>
                 </div>
                 <div id="filters">
                     <!-- Filtres -->
-                    <p>Filtres</p>
+                    <span>Filtres</span>
                     <button class="btn"><i class="fa-solid fa-money-bill-wave"></i>Économique</button>
                     <button class="btn"><i class="fa-solid fa-child-reaching"></i>Familial</button>
                     <button class="btn"><i class="fa-solid fa-heart"></i>Romantique</button>
