Ajout d'une div pour l'icone location pour mise en forme Comments CSS et ajustements

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 <p>En plein centre ville ou en pleine nature</p>
                 <div id="search-bar">
                     <!-- Barre de recherche -->
-                    <i class="fa-solid fa-location-dot"></i>
+                    <div id="location-icon">
+                        <i class="fa-solid fa-location-dot"></i>
+                    </div>
                     <form>
                         <input type="text" id="search" name="search">
                     </form>
