--- a/index.html
+++ b/index.html
@@ -317,58 +317,60 @@
         </main>
         <footer>
             <!-- Footer -->
-            <div class="about">
-                <!-- A propos -->
-                <p>A propos</p>
-                <ul>
-                    <li>
-                        <a href="#">
-                            Fonctionnement du site
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            Conditions générales de vente
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            Données et confidentialité
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="our-lodgings">
-                <!-- Nos Hébergements -->
-                <p>Nos hébergements</p>
-                <ul>
-                    <li>
-                        <a href="#">
-                            Charte qualité
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            Soumettre votre hôtel
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="help">
-                <!-- Assistance -->
-                <p>Assistance</p>
-                <ul>
-                    <li>
-                        <a href="#">
-                            Centre d'aide
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            Nous contacter
-                        </a>
-                    </li>
-                </ul>
+            <div class="footer-list">
+                <div class="about">
+                    <!-- A propos -->
+                    <p>A propos</p>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                Fonctionnement du site
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Conditions générales de vente
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Données et confidentialité
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="our-lodgings">
+                    <!-- Nos Hébergements -->
+                    <p>Nos hébergements</p>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                Charte qualité
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Soumettre votre hôtel
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="help">
+                    <!-- Assistance -->
+                    <p>Assistance</p>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                Centre d'aide
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Nous contacter
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </footer>
     </body>
