--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="css/test.css" />
+        <!-- 1200px et + -->
+        <link rel="stylesheet" href="css/style.css" />
+        <!-- 992px à 1199px -->
+        <link rel="stylesheet" media="screen and (max-width: 1199px)" href="css/style-L.css" />
         <title>Booki</title>
     </head>
 
