--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
     <head>
         <!-- En-tête de la page -->
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <!-- 1200px et + -->
+        <!-- 1200px et plus -->
         <link rel="stylesheet" href="css/style.css" />
-        <!-- 992px à 1199px -->
-        <link rel="stylesheet" media="screen and (max-width: 1199px)" href="css/style-L.css" />
+        <!-- 320px à 375px -->
+        <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 653px)" href="css/mobile/m-bp1.css" />
+        <link rel="stylesheet" media="screen and (min-width: 654px) and (max-width: 767px)" href="css/mobile/m-bp2.css" />
+        <!--
+        <link rel="stylesheet" media="screen and (min-width: 495px) and (max-width: 747px)" href="css/mobile/m-bp2.css" />
+        <link rel="stylesheet" media="screen and (min-width: 748px) and (max-width: 767px)" href="css/mobile/m-bp3.css" />
+        -->
         <title>Booki</title>
     </head>
 
