Ajout 2 bp Blocage largeur max pour +1440px Ajustement hauteur cards activité Ajustements marges

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <link rel="stylesheet" media="screen and (min-width: 570px) and (max-width: 653px)" href="css/mobile/m-bp3.css" />
         <!-- 654px à 767px -->
         <link rel="stylesheet" media="screen and (min-width: 654px) and (max-width: 767px)" href="css/mobile/m-bp4.css" />
+        <!-- 768px à 991px -->
+        <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 991px)" href="css/tablet/t-bp1.css" />
+        <!-- 992px à 1199px -->
+        <link rel="stylesheet" media="screen and (min-width: 992px) and (max-width: 1199px)" href="css/computers/c-bp1.css" />
         <title>Booki</title>
     </head>
 
