Ajouts/suppression de BP Nettoyage du code

--- a/index.html
+++ b/index.html
@@ -27,26 +27,34 @@
     <!-- 480px à 569px -->
     <link
       rel="stylesheet"
-      media="screen and (min-width: 480px) and (max-width: 569px)"
+      media="screen and (min-width: 480px) and (max-width: 577px)"
       href="css/mobile/m-bp2.css"
     />
     <!-- 570px à 653px -->
     <link
       rel="stylesheet"
-      media="screen and (min-width: 570px) and (max-width: 653px)"
+      media="screen and (min-width: 578px) and (max-width: 767px)"
       href="css/mobile/m-bp3.css"
     />
     <!-- 654px à 767px -->
+    <!--
     <link
       rel="stylesheet"
       media="screen and (min-width: 654px) and (max-width: 767px)"
       href="css/mobile/m-bp4.css"
     />
-    <!-- 768px à 991px -->
+    -->
+    <!-- 768px à 867px -->
     <link
       rel="stylesheet"
-      media="screen and (min-width: 768px) and (max-width: 991px)"
+      media="screen and (min-width: 768px) and (max-width: 899px)"
       href="css/tablet/t-bp1.css"
+    />
+    <!-- 868px à 992px -->
+    <link
+      rel="stylesheet"
+      media="screen and (min-width: 900px) and (max-width: 991px)"
+      href="css/tablet/t-bp2.css"
     />
     <!-- 992px à 1199px -->
     <link
