--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
       href="css/tablet/t-bp2.css"
     />
     <!-- 992px à 1199px -->
+    <!--
     <link
       rel="stylesheet"
       media="screen and (min-width: 992px) and (max-width: 1199px)"
       href="css/computers/c-bp1.css"
     />
+    -->
     <title>Booki</title>
   </head>
 
@@ -126,12 +128,11 @@
           <div class="lodging-list">
             <a href="#">
               <figure class="lodging">
-                <div class="lodging-image">
-                  <img
-                    src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                    alt="Auberge La Cannebière"
-                  />
-                </div>
+                <img
+                  class="lodging-image"
+                  src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                  alt="Auberge La Cannebière"
+                />
                 <figcaption>
                   <h3>Auberge La Cannebière</h3>
                   <p class="price">
@@ -149,12 +150,11 @@
             </a>
             <a href="#">
               <figure class="lodging">
-                <div class="lodging-image">
-                  <img
-                    src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                    alt="Hôtel du port"
-                  />
-                </div>
+                <img
+                  class="lodging-image"
+                  src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                  alt="Hôtel du port"
+                />
                 <figcaption>
                   <h3>Hôtel du port</h3>
                   <p class="price">Nuit à partir de 52<b>€</b></p>
@@ -170,12 +170,11 @@
             </a>
             <a href="#">
               <figure class="lodging">
-                <div class="lodging-image">
-                  <img
-                    src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                    alt="Hôtel Les mouettes"
-                  />
-                </div>
+                <img
+                  class="lodging-image"
+                  src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                  alt="Hôtel Les mouettes"
+                />
                 <figcaption>
                   <h3>Hôtel Les mouettes</h3>
                   <p class="price">Nuit à partir de 76<b>€</b></p>
@@ -191,12 +190,11 @@
             </a>
             <a href="#">
               <figure class="lodging">
-                <div class="lodging-image">
-                  <img
-                    src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                    alt="Hôtel de la mer"
-                  />
-                </div>
+                <img
+                  class="lodging-image"
+                  src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                  alt="Hôtel de la mer"
+                />
                 <figcaption>
                   <h3>Hôtel de la mer</h3>
                   <p class="price">Nuit à partir de 46<b>€</b></p>
@@ -212,12 +210,11 @@
             </a>
             <a href="#">
               <figure class="lodging">
-                <div class="lodging-image">
-                  <img
-                    src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                    alt="Auberge Le Panier"
-                  />
-                </div>
+                <img
+                  class="lodging-image"
+                  src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                  alt="Auberge Le Panier"
+                />
                 <figcaption>
                   <h3>Auberge Le Panier</h3>
                   <p class="price">
@@ -235,12 +232,11 @@
             </a>
             <a href="#">
               <figure class="lodging">
-                <div class="lodging-image">
-                  <img
-                    src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                    alt="Hôtel chez Amina"
-                  />
-                </div>
+                <img
+                  class="lodging-image"
+                  src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                  alt="Hôtel chez Amina"
+                />
                 <figcaption>
                   <h3>Hôtel chez Amina</h3>
                   <p class="price">Nuit à partir de 96<b>€</b></p>
@@ -266,12 +262,11 @@
           <div class="popular-list">
             <a href="#">
               <figure class="popular">
-                <div class="popular-image">
-                  <img
-                    src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                    alt="Hôtel Le soleil du matin"
-                  />
-                </div>
+                <img
+                  class="popular-image"
+                  src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                  alt="Hôtel Le soleil du matin"
+                />
                 <figcaption>
                   <h3>Hôtel Le soleil du matin</h3>
                   <p class="price">Nuit à partir de 128<b>€</b></p>
@@ -287,12 +282,11 @@
             </a>
             <a href="#">
               <figure class="popular">
-                <div class="popular-image">
-                  <img
-                    src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                    alt="Au coeur de l'eau"
-                  />
-                </div>
+                <img
+                  class="popular-image"
+                  src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                  alt="Au coeur de l'eau"
+                />
                 <figcaption>
                   <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                   <p class="price">Nuit à partir de 71<b>€</b></p>
@@ -308,12 +302,11 @@
             </a>
             <a href="#">
               <figure class="popular">
-                <div class="popular-image">
-                  <img
-                    src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                    alt="Hôtel Tout bleu et Blanc"
-                  />
-                </div>
+                <img
+                  class="popular-image"
+                  src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                  alt="Hôtel Tout bleu et Blanc"
+                />
                 <figcaption>
                   <h3>Hôtel Tout bleu et Blanc</h3>
                   <p class="price">Nuit à partir de 68<b>€</b></p>
