--- a/index.html
+++ b/index.html
@@ -22,48 +22,38 @@
     <link
       rel="stylesheet"
       media="screen and (min-width: 320px) and (max-width: 479px)"
-      href="css/mobile/m-bp1.css"
+      href="css/smartphone-small.css"
     />
-    <!-- 480px à 569px -->
+    <!-- 480px à 577px -->
     <link
       rel="stylesheet"
       media="screen and (min-width: 480px) and (max-width: 577px)"
-      href="css/mobile/m-bp2.css"
+      href="css/smartphone-medium.css"
     />
-    <!-- 570px à 653px -->
+    <!-- 578px à 767px -->
     <link
       rel="stylesheet"
       media="screen and (min-width: 578px) and (max-width: 767px)"
-      href="css/mobile/m-bp3.css"
+      href="css/smartphone-large.css"
     />
-    <!-- 654px à 767px -->
-    <!--
-    <link
-      rel="stylesheet"
-      media="screen and (min-width: 654px) and (max-width: 767px)"
-      href="css/mobile/m-bp4.css"
-    />
-    -->
-    <!-- 768px à 867px -->
+    <!-- 768px à 899px -->
     <link
       rel="stylesheet"
       media="screen and (min-width: 768px) and (max-width: 899px)"
-      href="css/tablet/t-bp1.css"
+      href="css/tablet-small.css"
     />
-    <!-- 868px à 992px -->
+    <!-- 900px à 991px -->
     <link
       rel="stylesheet"
       media="screen and (min-width: 900px) and (max-width: 991px)"
-      href="css/tablet/t-bp2.css"
+      href="css/tablet-large.css"
     />
     <!-- 992px à 1199px -->
-    <!--
     <link
       rel="stylesheet"
       media="screen and (min-width: 992px) and (max-width: 1199px)"
-      href="css/computers/c-bp1.css"
+      href="css/laptop.css"
     />
-    -->
     <title>Booki</title>
   </head>
 
@@ -130,7 +120,7 @@
               <figure class="lodging">
                 <img
                   class="lodging-image"
-                  src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                  src="images/hebergements/4_small/auberge-la-cannebiere.jpg"
                   alt="Auberge La Cannebière"
                 />
                 <figcaption>
@@ -152,7 +142,7 @@
               <figure class="lodging">
                 <img
                   class="lodging-image"
-                  src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                  src="images/hebergements/4_small/hotel-du-port.jpg"
                   alt="Hôtel du port"
                 />
                 <figcaption>
@@ -172,7 +162,7 @@
               <figure class="lodging">
                 <img
                   class="lodging-image"
-                  src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                  src="images/hebergements/4_small/hotel-les-mouettes.jpg"
                   alt="Hôtel Les mouettes"
                 />
                 <figcaption>
@@ -192,7 +182,7 @@
               <figure class="lodging">
                 <img
                   class="lodging-image"
-                  src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                  src="images/hebergements/4_small/hotel-de-la-mer.jpg"
                   alt="Hôtel de la mer"
                 />
                 <figcaption>
@@ -212,7 +202,7 @@
               <figure class="lodging">
                 <img
                   class="lodging-image"
-                  src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                  src="images/hebergements/4_small/auberge-le-panier.jpg"
                   alt="Auberge Le Panier"
                 />
                 <figcaption>
@@ -234,7 +224,7 @@
               <figure class="lodging">
                 <img
                   class="lodging-image"
-                  src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                  src="images/hebergements/4_small/hotel-chez-amina.jpg"
                   alt="Hôtel chez Amina"
                 />
                 <figcaption>
@@ -264,7 +254,7 @@
               <figure class="popular">
                 <img
                   class="popular-image"
-                  src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                  src="images/hebergements/4_small/hotel-le-soleil-du-matin.jpg"
                   alt="Hôtel Le soleil du matin"
                 />
                 <figcaption>
@@ -284,7 +274,7 @@
               <figure class="popular">
                 <img
                   class="popular-image"
-                  src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                  src="images/hebergements/4_small/au-coeur-de-l-eau.jpg"
                   alt="Au coeur de l'eau"
                 />
                 <figcaption>
@@ -304,7 +294,7 @@
               <figure class="popular">
                 <img
                   class="popular-image"
-                  src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                  src="images/hebergements/4_small/hotel-tout-bleu-et-blanc.jpg"
                   alt="Hôtel Tout bleu et Blanc"
                 />
                 <figcaption>
@@ -330,7 +320,7 @@
           <a href="#">
             <figure class="activity">
               <img
-                src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                src="images/activites/4_small/vieux-port.jpg"
                 alt="Vieux Port"
               />
               <figcaption>
@@ -341,7 +331,7 @@
           <a href="#">
             <figure class="activity">
               <img
-                src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                src="images/activites/4_small/fort-de-pomegues.jpg"
                 alt="Fort de Pomègues"
               />
               <figcaption>
@@ -352,7 +342,7 @@
           <a href="#">
             <figure class="activity">
               <img
-                src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                src="images/activites/4_small/iles-du-frioul.jpg"
                 alt="Îles du Frioul"
               />
               <figcaption>
@@ -363,7 +353,7 @@
           <a href="#">
             <figure class="activity">
               <img
-                src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                src="images/activites/4_small/parc-national-des-calanques.jpg"
                 alt="Parc National des Calanques"
               />
               <figcaption>
@@ -374,7 +364,7 @@
           <a href="#">
             <figure class="activity">
               <img
-                src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                src="images/activites/4_small/notre-dame-de-la-garde.jpg"
                 alt="Notre-Dame-de-la-Garde"
               />
               <figcaption>
@@ -385,7 +375,7 @@
           <a href="#">
             <figure class="activity">
               <img
-                src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                src="images/activites/4_small/parc-longchamp.jpg"
                 alt="Parc Longchamp"
               />
               <figcaption>
