Twitter Card & Open Graph

--- a/index.html
+++ b/index.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@booki" />
+    <meta name="twitter:title" content="Booki" />
+    <meta
+      name="twitter:description"
+      content="Trouvez votre hébergement pour des vacances de rêve"
+    />
+    <meta
+      name="twitter:image"
+      content="https://neutron35.github.io/Prototype-Booki/images/logo/Booki.png"
+    />
+    <!-- Open Graph -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Booki" />
+    <meta
+      property="og:description"
+      content="Trouvez votre hébergement pour des vacances de rêve"
+    />
+    <meta
+      property="og:url"
+      content="https://neutron35.github.io/Prototype-Booki/"
+    />
+    <meta
+      property="og:image"
+      content="https://neutron35.github.io/Prototype-Booki/images/logo/Booki.png"
+    />
     <!-- En-tête de la page -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
