Alt plus précis

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <img
                   class="lodging-image"
                   src="images/hebergements/4_small/auberge-la-cannebiere.jpg"
-                  alt="Auberge La Cannebière"
+                  alt="Auberge La Cannebière à Marseille"
                 />
                 <figcaption>
                   <h3>Auberge La Cannebière</h3>
@@ -170,7 +170,7 @@
                 <img
                   class="lodging-image"
                   src="images/hebergements/4_small/hotel-du-port.jpg"
-                  alt="Hôtel du port"
+                  alt="Hôtel du port à Marseille"
                 />
                 <figcaption>
                   <h3>Hôtel du port</h3>
@@ -190,7 +190,7 @@
                 <img
                   class="lodging-image"
                   src="images/hebergements/4_small/hotel-les-mouettes.jpg"
-                  alt="Hôtel Les mouettes"
+                  alt="Hôtel Les mouettes à Marseille"
                 />
                 <figcaption>
                   <h3>Hôtel Les mouettes</h3>
@@ -210,7 +210,7 @@
                 <img
                   class="lodging-image"
                   src="images/hebergements/4_small/hotel-de-la-mer.jpg"
-                  alt="Hôtel de la mer"
+                  alt="Hôtel de la mer à Marseille"
                 />
                 <figcaption>
                   <h3>Hôtel de la mer</h3>
@@ -230,7 +230,7 @@
                 <img
                   class="lodging-image"
                   src="images/hebergements/4_small/auberge-le-panier.jpg"
-                  alt="Auberge Le Panier"
+                  alt="Auberge Le Panier à Marseille"
                 />
                 <figcaption>
                   <h3>Auberge Le Panier</h3>
@@ -252,7 +252,7 @@
                 <img
                   class="lodging-image"
                   src="images/hebergements/4_small/hotel-chez-amina.jpg"
-                  alt="Hôtel chez Amina"
+                  alt="Hôtel chez Amina à Marseille"
                 />
                 <figcaption>
                   <h3>Hôtel chez Amina</h3>
@@ -282,7 +282,7 @@
                 <img
                   class="popular-image"
                   src="images/hebergements/4_small/hotel-le-soleil-du-matin.jpg"
-                  alt="Hôtel Le soleil du matin"
+                  alt="Hôtel Le soleil du matin à Marseille"
                 />
                 <figcaption>
                   <h3>Hôtel Le soleil du matin</h3>
@@ -302,7 +302,7 @@
                 <img
                   class="popular-image"
                   src="images/hebergements/4_small/au-coeur-de-l-eau.jpg"
-                  alt="Au coeur de l'eau"
+                  alt="Chambre d'hôtes Au coeur de l'eau à Marseille"
                 />
                 <figcaption>
                   <h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -322,7 +322,7 @@
                 <img
                   class="popular-image"
                   src="images/hebergements/4_small/hotel-tout-bleu-et-blanc.jpg"
-                  alt="Hôtel Tout bleu et Blanc"
+                  alt="Hôtel Tout bleu et Blanc à Marseille"
                 />
                 <figcaption>
                   <h3>Hôtel Tout bleu et Blanc</h3>
