--- a/index.html
+++ b/index.html
@@ -8,11 +8,53 @@
 			name="description"
 			content="Vous souhaitez passer des vacances inoubliables, mais vous avez du mal à trouver un hébergement ? Avec Booki, simplifiez-vous la vie ! Profitez de notre moteur de recherche et trouvez le logement qui vous correspond, partout en France."
 		/>
+		<style type="text/css">
+			.fa,
+			.fa-brands,
+			.fa-duotone,
+			.fa-light,
+			.fa-regular,
+			.fa-solid,
+			.fa-thin,
+			.fab,
+			.fad,
+			.fal,
+			.far,
+			.fas,
+			.fat {
+				-moz-osx-font-smoothing: grayscale;
+				-webkit-font-smoothing: antialiased;
+				display: var(--fa-display, inline-block);
+				font-style: normal;
+				font-variant: normal;
+				line-height: 1;
+				text-rendering: auto;
+			}
+
+			.fa-1x {
+				font-size: 1em;
+			}
+		</style>
 		<link rel="stylesheet" href="css/normalize.css" />
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
 		/>
+		<link
+			rel="preload"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+			as="style"
+			onload="this.onload=null;this.rel='stylesheet'"
+		/>
+		<noscript>
+			<link
+				rel="stylesheet"
+				href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+				integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+				crossorigin="anonymous"
+				referrerpolicy="no-referrer"
+			/>
+		</noscript>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
